# ntp_monitor

./: .gitignore  README.md  install_config.sh  ntp_monitor.conf.example  pyproject.toml
scripts/: run_ntp_monitor.sh
src/ntp_monitor/: __init__.py  main.py
