[project]
name = "ntp-monitor"
version = "0.1.0"
description = "NTP Jitter Monitoring Program"
authors = [
    { name = "Nate Doohyun Jang", email = "1220430+lum7671@users.noreply.github.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
ntp-monitor = "ntp_monitor.main:main"
ntp_monitor = "ntp_monitor.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ntp_monitor"]
